배경 Reposition 스크립트 설정, 반복해서 이동

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Assets\Bird.cs" />
     <Compile Include="Assets\Scroll.cs" />
+    <Compile Include="Assets\Reposition.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Flappy Bird Style\_ReadMe.txt" />
