싱글턴 패턴을 이용한 새 죽는 코딩 만들

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Assets\Bird.cs" />
     <Compile Include="Assets\Reposition.cs" />
     <Compile Include="Assets\Column.cs" />
+    <Compile Include="Assets\TimeController.cs" />
+    <Compile Include="Assets\GameManager.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Flappy Bird Style\_ReadMe.txt" />
